tests/snapshots/parser__exprs__bare_identifier.snap
---
source: tests/parser.rs
expression: "parse(\"foo\")"
---
Ok(
    [
        Expr(
            Identifier(
                "foo",
                Span {
                    start: 0,
                    end: 3,
                },
            ),
        ),
    ],
)
