tests/snapshots/parser__exprs__call_nested.snap
---
source: tests/parser.rs
expression: "parse(\"f(g(x))\")"
---
Ok(
    [
        Expr(
            Call {
                callee: Identifier(
                    "f",
                    Span {
                        start: 0,
                        end: 1,
                    },
                ),
                args: [
                    Call {
                        callee: Identifier(
                            "g",
                            Span {
                                start: 2,
                                end: 3,
                            },
                        ),
                        args: [
                            Identifier(
                                "x",
                                Span {
                                    start: 4,
                                    end: 5,
                                },
                            ),
                        ],
                        span: Span {
                            start: 2,
                            end: 6,
                        },
                    },
                ],
                span: Span {
                    start: 0,
                    end: 7,
                },
            },
        ),
    ],
)
