tests/snapshots/parser__exprs__string_literal.snap
---
source: tests/parser.rs
expression: "parse(r#\"\"hello\"\"#)"
---
Ok(
    [
        Expr(
            String(
                "hello",
                Span {
                    start: 0,
                    end: 7,
                },
            ),
        ),
    ],
)
